--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -4,6 +4,7 @@
 {{ category.name }}
 {% endblock %}
 {% block body_block %}
+Твой ip  - {{ user_ip }}
 <div>
     {% if category %}
         <h1>{{ category.name }}</h1>
