--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -29,9 +29,11 @@ This is body_block's default content.
 <div>
     <ul>
         {% if user.is_authenticated %}
+        <li><a href="{% url 'profile' user.username %}">Profile</a></li>
         <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
         <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
         <li><a href="{% url 'add_category' %}">Add New Category</a></li>
+        <li><a href="{% url 'list_profiles' %}">List Profiles</a></li>
         {% else %}
         <li><a href="{% url 'auth_login' %}">Sign in</a></li>
         <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
